--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,32 +1,29 @@
 {
-    "languageserver":{	
-    "clangd":{
-      "command":"clangd",
-      "filetypes":[
-        "c",
-        "cpp"
-      ],
-      "rootPatterns":[
-        "compile_commands.json",
-        ".git"
-      ],
-      "args":[
-        "--compile-commands-dir=build",
-        "--compile_args_from=filesystem",
-        "--all-scopes-completion",
-        "--background-index",
-        "--clang-tidy",
-        "--cross-file-rename",
-        "--completion-parse=always",
-        "--completion-style=detailed",
-        "--function-arg-placeholders",
-        "--header-insertion-decorators",
-        "--query-driver=/usr/bin/**/clang-*,/home/adem/GCC-10/bin/g++*",
-        "--header-insertion=never",
-        "--limit-results=0",
-        "-j=6",
-        "--pch-storage=memory"
-      ]
-    }
+  "languageserver": {
+	"ccls": {
+		"command": "ccls",
+		"filetypes": ["c", "cpp", "cuda", "objc", "objcpp"],
+		"rootPatterns": [".ccls", "compile_commands.json"],
+		"initializationOptions": {
+			"cache": {
+				"directory": ".ccls-cache",
+				"format": "binary"
+			},
+			"client": {
+				"snippetSupport": true
+			},
+			"index": {
+				"onChange": true
+			},
+			"highlight": {
+				"lsRanges": true
+			}
+		}
+	},
+	"csharp-ls": {
+	  "command": "csharp-ls",
+	  "filetypes": ["cs"],
+	  "rootPatterns": ["*.csproj", ".vim/", ".git/", ".hg/"]
+	}
   }
 }
